--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        swift: ["6.2"]
+        os: [macos-latest, ubuntu-latest]
+        swift: ["6.2.3"]
     
     steps:
     - uses: actions/checkout@v5
